# gCull

./: .gitignore  README.md  environment.yml  pyproject.toml  readme.md  rename_mask.sh  requirements.txt
gCullCLI/: cli_main.py
gCullCUDA/: cull_points.cu  cull_points.h  ext.cpp  setup.py
gCullCUDA/cuda_culler/: auxiliary.h  config.h  culler.h  culler_impl.cu  culler_impl.h  forward.cu  forward.h
gCullCUDA/gCullCUDA/: __init__.py  utils.py
gCullMASK/: mask_main.py  utils_mask.py
gCullPY/cameras/: cameras.py
gCullPY/main/: gcull_main.py  utils_cull.py  utils_ground.py  utils_main.py
gCullPY/models/: splatfacto.py
gCullPY/pipelines/: base_pipeline.py
gCullUTILS/: utils.py
gsplat_gof/: setup.py
gsplat_gof/gsplat/: __init__.py  rendering.py
nerfstudio/cameras/: camera_paths.py  camera_utils.py  cameras.py  rays.py
nerfstudio/configs/: base_config.py  dataparser_configs.py  method_configs.py
nerfstudio/data/: pixel_samplers.py
nerfstudio/engine/: trainer.py
nerfstudio/main/: gcull_main.py  utils_cull.py  utils_main.py
nerfstudio/models/: base_model.py  splatfacto.py
nerfstudio/pipelines/: base_pipeline.py
nerfstudio/plugins/: registry.py  registry_dataparser.py
nerfstudio/process_data/: colmap_utils.py
nerfstudio/scripts/: gcull.py  render.py  skycull.py  utils.py
nerfstudio/utils/: decorators.py  eval_utils.py
ray_splat_renderer/: CMakeLists.txt  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
ray_splat_renderer/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  (+2 more)
(+29 files in other folders)
