[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gCull"
version = "0.0.1"
description = "Tool to clean noisy Gaussians associated with sky in a 3DGS model"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8.0.76",
    "Pillow>=10.3.0",
    "PyYAML>=6.0",
    "rich>=12.5.1",
    "scikit-learn>=1.2",
    "typing-extensions>=4.4.0",
    "jaxtyping>=0.2.15",
    "torch>=2.6.0",
    "tyro>=0.6.6"
]

[project.urls]
"Homepage" = "https://github.com/db-githb/gCull"

[project.scripts]
gcull = "gCullPY.main.gcull_main:entrypoint"

[tool.setuptools.packages.find]
include = ["gCullPY*"]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.1",
    "pre-commit>=3.3",
    "ruff>=0.1.13"
]
